@startuml Ranking System - Modelo de Datos

' ======================================================
' El modelo soporta:
' - Rankings por jugador, equipo, personaje, país, región, plataforma
' - Duelos 1v1, multi-player y por equipos
' - Torneos, ligas y temporadas
' - Cálculo incremental y reproducible del ranking
' 
' Una entidad debe tener code si cumple al menos una de estas condiciones:
' - Representa un concepto del dominio (no puramente técnico)
' - Puede ser referenciada externamente (API, URL, UI, documentación)
' - Puede necesitar estabilidad de identidad entre cargas, temporadas o bases
' - Puede ser rankeada, filtrada o comparada de forma independiente
' - Puede existir fuera del contexto inmediato de otra entidad

' Una entidad NO debe tener code si:
' - Es puramente relacional
' - Es interna, técnica o efímera
' - No tiene significado aislado
' - Nunca será referenciada sola
' ======================================================

' ==================================================
' ENTIDADES BASE
' ==================================================

entity Country {
  id
  code
  name
  iso_code
}

entity Region {
  id
  code
  name
}

entity Platform {
  id
  code
  name
}

entity Game {
  id
  code
  name
}

entity GameVersion {
  id
  code
  version
}

entity CharacterIdentity {
  id
  code
  name
  franchise
}

entity GameCharacter {
  id
  code
}

' ==================================================
' JUGADORES
' ==================================================

entity Player {
  id
  code
  nickname
}

entity PlayerAlias {
  id
  alias
}

entity PlayerSocial {
  id
  platform
  handle
}

' ==================================================
' TEMPORADAS Y EVENTOS
' ==================================================

entity Season {
  id
  code
  name
}

entity EventType {
  id
  name
}

entity Event {
  id
  code
  name
  event_date
  bracket_url
  playlist_url
}

' ==================================================
' DUELOS Y EQUIPOS
' ==================================================

entity DuelType {
  id
  name
}

entity Duel {
  id
  code
  order
  video_url
}

entity Team {
  id
  code
  name
}

entity DuelTeam {
  id
}

entity DuelTeamMember {
  id
}

' ==================================================
' BATALLAS Y ROUNDS
' ==================================================

entity Battle {
  id
  order
}

entity BattleParticipant {
  id
}

entity Round {
  id
  order
}

entity RoundResult {
  id
  result_code
}

' ==================================================
' RELACIONES Y CARDINALIDADES
' ==================================================

' ──────────────
' JUGADORES
' ──────────────
Country "1" <-- "0..*" Player : un jugador representa un país
Player "1" -- "0..*" PlayerAlias : un jugador puede tener varios alias
Player "1" -- "0..*" PlayerSocial : un jugador puede tener múltiples redes

' ──────────────
' JUEGOS
' ──────────────
Game "1" -- "1..*" GameVersion : un juego tiene múltiples versiones
Platform "1" -- "1..*" GameVersion : una versión pertenece a una plataforma
CharacterIdentity "1" -- "1..*" GameCharacter : identidad abstracta
GameVersion "1" -- "0..*" GameCharacter : personaje específico por versión

' ──────────────
' EVENTOS
' ──────────────
Season "1" -- "0..*" Event : una temporada contiene eventos
Region "1" -- "0..*" Event : un evento ocurre en una región
EventType "1" -- "0..*" Event : torneo, liga, FT, etc
GameVersion "1" -- "0..*" Event : evento jugado en versión concreta

' ──────────────
' DUELOS
' ──────────────
Event "1" -- "1..*" Duel : un evento tiene uno o más duelos
DuelType "1" -- "0..*" Duel : FT5, FT10, triple amenaza, teams

' ──────────────
' EQUIPOS Y PARTICIPANTES
' ──────────────
Duel "1" -- "1..*" DuelTeam : un duelo tiene uno o más equipos
Team "1" -- "0..*" DuelTeam : un equipo puede participar en muchos duelos
DuelTeam "1" -- "1..*" DuelTeamMember : un equipo de duelo tiene miembros
Player "1" -- "0..*" DuelTeamMember : jugador participa en equipos

' ──────────────
' BATALLAS
' ──────────────
Duel "1" -- "1..*" Battle : un duelo se compone de batallas
Battle "1" -- "2" BattleParticipant : cada batalla enfrenta dos jugadores
Player "1" -- "0..*" BattleParticipant : jugador participa en batallas
GameCharacter "1" -- "0..*" BattleParticipant : personaje usado en batalla
DuelTeam "0..1" -- "0..*" BattleParticipant : opcional (solo en team battles)

' ──────────────
' ROUNDS
' ──────────────
Battle "1" -- "1..*" Round : una batalla tiene rounds
Round "1" -- "2" RoundResult : cada round tiene dos resultados
Player "1" -- "0..*" RoundResult : resultado pertenece a un jugador

@enduml
